# di

./: CMakeLists.txt  DEPS  deps.cmake
include/avakar/: di.h
src/: impl.h
test/: main.cpp
